<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/sorting" android:title="@string/sort_option">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/sort_by_name_asc" android:title="@string/name_asc" />
                <item android:id="@+id/sort_by_name_desc" android:title="@string/name_desc" />
                <item android:id="@+id/sort_by_date_asc" android:title="@string/date_asc" />
                <item android:id="@+id/sort_by_date_desc" android:title="@string/date_desc" />
            </group>
        </menu>
    </item>
    <item android:id="@+id/progress" android:title="@string/progress_bar" app:actionViewClass="android.widget.Switch"/>
</menu>