<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout android:orientation="vertical"
                  android:paddingTop="15dp"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-thin"
            android:textSize="18sp"
            android:textColor="@color/appName"/>

        <TextView
            android:id="@+id/app_name_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_name"
            android:fontFamily="sans-serif-thin"
            android:textSize="18sp"
            android:textColor="@color/appName"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:fontFamily="sans-serif-thin"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="sans-serif-thin"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

</LinearLayout>